fix logo alignment

--- a/src/styles/nav.sass
+++ b/src/styles/nav.sass
@@ -6,7 +6,7 @@ $inset: 1.6rem
 .logo
   position: fixed
   top: $inset
-  left: $inset
+  left: 1.9rem
   width: 6rem
 
   img
